--- a/index.html
+++ b/index.html
@@ -25,6 +25,25 @@
 			<!-- Use JavaScript to replace these -->
 		</section>
 	</div>
+
+	<a href="#" id="reserve">Reserve Seats</a>
+	<section id="resform">
+		<h2>Complete this form to confirm your reservations</h2>
+
+		<p id="selectedseats">You have selected X seats</p>
+
+		<form id="confirmres">
+			<label for="fname"> First name</label>
+			<input type="text" name="fname" id="fname" placeholder="Bob" required>
+
+			<label for="lname"> Last name</label>
+			<input type="text" name="lname" id="lname" placeholder="Jones" required>
+
+			<input type="submit" name="send" id="confirmbtn" value="Confirm Reservation">
+
+			<p>Or <a href="#" id="cancel">cancel</a> and choose different seats</p>
+		</form>
+	</section>
 	<script src="myscript.js"></script>
 </body>
 
